src/webchat/app/assets/stylesheets/style.less
/* palette http://www.colourlovers.com/palette/373610/mellon_ball_surprise ? */

/* fonts */
@font-face {
  font-family: dejavusans;
  src: url('../fonts/DejaVuSansCondensed.ttf');
}

@font-face {
  font-family: dejavusans;
  font-weight: bold;
  src: url('../fonts/DejaVuSansCondensed-Bold.ttf');
}

/* variables */
@white1:#ffffff;
@black: #000000;
@lightgray1: #dddddd;
@lightgray2: #c0c0c0;
@white2:#DEE9F7;
@blue1:#8BB2E4;
@blue2:#387BD2;
@blue3:#1E4B85;
@blue4:#0B1C32;

/* mixins */
.border_rad(@rad){
    -webkit-border-radius: @rad;
    -moz-border-radius: @rad;
    border-radius: @rad;
}

.border_rad_top_right(@rad){
    -webkit-border-top-right-radius: @rad;
    -moz-border-radius-topright: @rad;
    border-top-right-radius: @rad;
}

.border_rad_top(@rad)
{
    -webkit-border-top-left-radius: @rad;
    -webkit-border-top-right-radius: @rad;
    -moz-border-radius-topleft: @rad;
    -moz-border-radius-topright: @rad;
    border-top-left-radius: @rad;
    border-top-right-radius: @rad;
}

.border_rad_bottom(@rad)
{
    -webkit-border-bottom-right-radius: @rad;
    -webkit-border-bottom-left-radius: @rad;
    -moz-border-radius-bottomright: @rad;
    -moz-border-radius-bottomleft: @rad;
    border-bottom-right-radius: @rad;
    border-bottom-left-radius: @rad;
}

.grad(@from, @to){
    background-image: linear-gradient(top, @from 0%, @to 100%);
    background-image: -o-linear-gradient(top, @from 0%, @to 100%);
    background-image: -moz-linear-gradient(top, @from 0%, @to 100%);
    background-image: -webkit-linear-gradient(top, @from 0%, @to 100%);
    background-image: -ms-linear-gradient(top, @from 0%, @to 100%);
}

.shadow(@horizontal, @vertical, @blur, @spread, @color)
{
    -moz-box-shadow:    @horizontal @vertical @blur @spread @color;
    -webkit-box-shadow: @horizontal @vertical @blur @spread @color;
    box-shadow:         @horizontal @vertical @blur @spread @color;
}

.box-sizing(@sizing)
{
    -moz-box-sizing: @sizing;
    box-sizing: @sizing;
}

/* styling */
html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  font-family: dejavusans;
}

/**
 * Common classes
 */
input, textarea {
    border: 1px solid #aaa;
}

/**
 * Links that look like buttons
 */
.link_button {
    display: inline-block;
    text-decoration: none;
    border:1px solid #ccc;
    margin: 5px;
    padding:3px 10px;
    .grad(#444, #222);
    color:@white1;
    line-height: 18px;
}

/**
 * Online and offline icons
 */
.online {
    background-image:url(../images/online.png);
    background-repeat:no-repeat;
    background-position:left center;
}
        
.offline {

}

/**
 * Black background for popups
 */
.popup_wrapper {
    display:none;
    background-color:#000;
    opacity:0.7;
    position:absolute;
    z-index:10;
    left:0;
    right:0;
    bottom:0;
    top:-55px;
}

/**
 * Popup windows
 */
.popup_window {
    margin: auto;
    background-color:@white1;
    z-index:20;
    border: 1px solid #aaa;
    position:absolute;
    display:none;
    left: 50%;
    top: 50%;
    width: 420px;
    margin-left: -210px;
     
    .popup_window_title {
        .box-sizing(border-box);
        width: 100%;
        height:30px;
        line-height:30px;
        padding:0px 10px;
        border-bottom:1px solid @blue4;
        .grad(#444, #222);
        color:@white1;
    }
    
    .popup_window_content {
        padding:10px;
        width: 100%;
        .box-sizing(border-box);
        overflow: auto;
    }
    
    .popup_window_buttons {
        position: absolute;
        bottom: 0;
        .box-sizing(border-box);
        border-top:1px solid #aaa;
        width: 100%;
        height:35px;
        padding:5px;
        text-align:right;
        background-color: #eee;
    }
    
    .field {
        width:100%;
        padding:5px 0px;
            
        label {
            float:left;
            text-align: right;
            width:120px;
            padding-right: 10px;
        }
    }
    
}

/**
 * Popup form for a new channel
 */
#newchannel_window {
    height:200px;
    margin-top: -60px;
}

/**
 * Popup form for editing ones profile
 */
#edit_profile_window {
    height:300px;
    margin-top: -150px;
}

/**
 * Popup form for a change topic dialogue
 */
#change_topic_window {
    height: 300px;
    margin-top: -150px;
    
    textarea {
        width: 250px;
        height: 180px;
    }
}


/**
 * Popup form for a delete channel dialogue
 */
#delete_channel_window {
    height: 200px;
    margin-top: -100px;
}


/**
 * Popup form for a close channel dialogue
 */
#close_channel_window {
    height: 200px;
    margin-top: -100px;
}

/**
 * Popup form for a rename channel dialogue
 */
#change_channel_name_window {
    height: 120px;
    margin-top: -60px;
}

/**
 * Popup for an invite dialogue
 */
#invite_window {
    width:500px;
    height:618px;
    margin-left: -250px;
    margin-top: -309px;    

    #invite_toolbar {
        .box-sizing(border-box);
        width: 100%;
        height:35px;
        padding:5px;
        border-top: 1px solid #aaa;
        border-bottom: 1px solid #aaa;
        background-color: #eee; 
    }
    
    .select_list {
        .box-sizing(border-box);
        width: 50%;
        float: left;
        height: 230px;
                    
        h1 {
            font-size: 13pt;
            margin: 0;
            padding: 0;
            font-weight: normal;
        }
                
        ul {
            overflow: auto;
            
            li {
                cursor: pointer;
            }
        }
    }


    #selected_preview {
        .box-sizing(border-box);
        width: 100%;
        height: 270px;
        padding: 10px;
        border-bottom: 1px solid #aaa;
    }

    #invite_selected {
        .box-sizing(border-box);
        padding:10px;
        height:250px;
        .box-sizing(border-box);
        width: 100%;
     }
     
}
/* ... */

